# metadata_rag_poc

./: .gitignore  pyproject.toml  requirements.txt  test_output.txt  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py
config/: __init__py  business_rules.py  metadata_schema.json  settings.py
data/chroma_db/: chroma.sqlite3
data/raw/: medical_rag_stress_test.txt
prompts/: answer_generation.md  classification.md  doc_metadata_extraction.md  query_understanding.md
scripts/: ingest_documents.py  query_rag.py
src/generation/: answer_generator.py
src/ingestion/: chunker.py  pdf_loader.py
src/metadata/: classifier.py  doc_extractor.py  prompt_loader.py  prompts.py  validator.py
src/orchestration/: graph.py  nodes.py  state.py
src/retrieval/: retriever.py
src/storage/: chroma_manager.py  embedder.py
src/utils/: llm_client.py  logger.py
