[project]
name = "rag-metadata-poc"
version = "0.1.0"
description = "RAG system with LLM-generated structured metadata"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.1.0",
    "langchain-core>=0.3.28",
    "langchain>=0.3.14",
    "langchain-openai>=0.2.14",
    "langchain-community>=0.3.14",
    "langchain-text-splitters>=0.3.4",
    "langgraph>=0.2.62",
    "openai>=1.58.1",
    "chromadb>=0.4.18",
    "pypdf>=3.17.4",
    "pymupdf>=1.23.8",
    "tiktoken>=0.5.2",
    "nltk>=3.8.1",
    "jsonschema>=4.20.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]

[project.scripts]
ingest = "scripts.ingest_documents:main"
query = "scripts.query_rag:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "chromadb.*",
    "pymupdf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]